--- a/vesta/vesta WatchKit App/Base.lproj/Interface.storyboard
+++ b/vesta/vesta WatchKit App/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
     <device id="watch38" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -116,7 +116,11 @@
                                 <segue destination="qHQ-wf-HT1" kind="push" id="Ruh-e0-rtM"/>
                             </connections>
                         </button>
-                        <button width="1" alignment="left" verticalAlignment="bottom" title="Timer" id="BBA-ST-9UQ"/>
+                        <button width="1" alignment="left" verticalAlignment="bottom" title="Timer" id="BBA-ST-9UQ">
+                            <connections>
+                                <segue destination="srH-X7-X1C" kind="push" id="FxP-kD-de2"/>
+                            </connections>
+                        </button>
                         <button width="1" alignment="left" verticalAlignment="bottom" title="Music" id="YDe-mP-ulD">
                             <connections>
                                 <segue destination="RDD-ii-InN" kind="push" id="kS4-ZH-Y6q"/>
@@ -192,7 +196,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="614" y="439"/>
+            <point key="canvasLocation" x="788" y="335"/>
         </scene>
         <!--calendar-->
         <scene sceneID="XYH-3n-idm">
@@ -216,7 +220,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="285" y="676"/>
+            <point key="canvasLocation" x="496" y="356"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -234,6 +238,124 @@
             </objects>
             <point key="canvasLocation" x="207" y="997"/>
         </scene>
+        <!--MuTimer Setup-->
+        <scene sceneID="Pxf-AC-Tde">
+            <objects>
+                <controller identifier="MuTimer Setup" id="srH-X7-X1C">
+                    <items>
+                        <label alignment="center" text="MUSIC TIMER" id="KKx-47-8pM"/>
+                        <group width="1" alignment="left" id="AyZ-Px-Up5">
+                            <items>
+                                <imageView width="50" height="52" alignment="left" image="music" contentMode="scaleAspectFit" id="gUW-v9-rKH"/>
+                                <picker width="0.20000000000000001" height="0.69999999999999996" alignment="right" verticalAlignment="center" id="PFM-7z-j0X"/>
+                                <label alignment="right" verticalAlignment="center" text="songs" id="WyB-Ye-Tj2"/>
+                            </items>
+                        </group>
+                        <label alignment="center" text="EST. TIME" id="eSA-58-x8W">
+                            <color key="textColor" red="0.055481267000000001" green="0.46749884520000001" blue="0.72115851679999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </label>
+                        <group width="1" alignment="left" id="2Zc-OV-9oS">
+                            <items>
+                                <label alignment="center" verticalAlignment="center" text="20" id="aF1-95-1h7"/>
+                                <label alignment="center" verticalAlignment="center" text="min" id="C3a-vE-Xz0"/>
+                            </items>
+                        </group>
+                        <button width="1" alignment="center" verticalAlignment="bottom" title="Start" id="McP-R9-88t">
+                            <color key="backgroundColor" red="0.043648039652846853" green="0.39326521615711335" blue="0.61235022668393779" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="uuh-es-FXd" kind="push" id="eWE-95-jca"/>
+                            </connections>
+                        </button>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="320" y="744"/>
+        </scene>
+        <!--MuTimer Run-->
+        <scene sceneID="oIT-TI-9gy">
+            <objects>
+                <controller identifier="MuTimer Run" id="uuh-es-FXd">
+                    <items>
+                        <label alignment="center" text="MUSIC TIMER" id="8I6-Tk-ho0"/>
+                        <group width="1" alignment="left" id="c2i-PL-4Xi">
+                            <items>
+                                <imageView width="40" height="50" alignment="left" image="music" contentMode="scaleAspectFit" id="h4x-P9-0Fa"/>
+                                <label alignment="right" verticalAlignment="center" text="2" id="FGg-aJ-m4y"/>
+                                <label alignment="right" verticalAlignment="center" text="songs left" id="XXY-Qg-Sim"/>
+                            </items>
+                        </group>
+                        <label alignment="center" text="TIME REMAINING" id="Y54-HU-f5m">
+                            <color key="textColor" red="0.055481267000000001" green="0.46749884520000001" blue="0.72115851679999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </label>
+                        <group width="1" alignment="left" id="rTp-aI-CbG">
+                            <items>
+                                <label alignment="center" verticalAlignment="center" text="20" id="ADP-Ma-2Cf"/>
+                                <label alignment="center" verticalAlignment="center" text="min" id="yrq-qC-euj"/>
+                            </items>
+                        </group>
+                        <button width="1" alignment="center" verticalAlignment="bottom" title="Stop" id="sQB-bZ-X33">
+                            <color key="backgroundColor" red="0.88369053600000003" green="0.1971288571" blue="0.12172761510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="g0d-QQ-h1T" kind="push" id="O6L-dh-kir"/>
+                            </connections>
+                        </button>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="590" y="745"/>
+        </scene>
+        <!--Energy Score-->
+        <scene sceneID="w2s-aT-shQ">
+            <objects>
+                <controller identifier="Energy Score" id="g0d-QQ-h1T">
+                    <items>
+                        <group width="1" alignment="left" layout="vertical" spacing="6" id="WVz-wN-zYz">
+                            <items>
+                                <label alignment="center" text="ENERGY SCORE" id="y2Z-Sp-70r"/>
+                                <group width="1" alignment="left" id="Zt3-jW-0H0">
+                                    <items>
+                                        <imageView width="0.29999999999999999" height="1" alignment="left" image="water" id="z6d-ov-VWp"/>
+                                        <group alignment="left" layout="vertical" id="B9a-mM-jDn">
+                                            <items>
+                                                <label alignment="center" text="Water Used" id="Vzc-oJ-hNv"/>
+                                                <group width="1" alignment="left" id="NhT-Am-m8L">
+                                                    <items>
+                                                        <label alignment="center" text="20" id="sYW-MJ-AHb"/>
+                                                        <label alignment="center" text="L" id="TOY-LA-ZaA"/>
+                                                    </items>
+                                                </group>
+                                            </items>
+                                        </group>
+                                    </items>
+                                </group>
+                                <group width="1" alignment="left" id="5Bx-db-bZP">
+                                    <items>
+                                        <imageView width="0.29999999999999999" height="1" alignment="left" image="electricity" id="aEJ-az-EBU"/>
+                                        <group alignment="left" layout="vertical" id="i5y-94-AGW">
+                                            <items>
+                                                <label alignment="center" text="Power Used" id="dSK-3B-kIl"/>
+                                                <group width="1" alignment="left" id="v4b-sL-Iyp">
+                                                    <items>
+                                                        <label alignment="center" text="200" id="5Ob-dt-d8h"/>
+                                                        <label alignment="center" text="kJ" id="O18-Ua-fHd"/>
+                                                    </items>
+                                                </group>
+                                            </items>
+                                        </group>
+                                    </items>
+                                </group>
+                                <button width="0.5" height="0.25" alignment="center" verticalAlignment="bottom" backgroundImage="smalllogo" id="vei-do-efJ">
+                                    <connections>
+                                        <segue destination="AgC-eL-Hgc" kind="push" id="aYf-W5-RKf"/>
+                                    </connections>
+                                </button>
+                            </items>
+                        </group>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="866" y="742"/>
+        </scene>
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
@@ -243,6 +365,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="KmW-hc-qaz"/>
+        <segue reference="kS4-ZH-Y6q"/>
     </inferredMetricsTieBreakers>
 </document>
