--- a/vesta/vesta WatchKit App/Base.lproj/Interface.storyboard
+++ b/vesta/vesta WatchKit App/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
     <device id="watch38" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -261,7 +261,7 @@
                             </items>
                         </group>
                         <button width="1" alignment="center" verticalAlignment="bottom" title="Start" id="McP-R9-88t">
-                            <color key="backgroundColor" red="0.043648039652846853" green="0.39326521615711335" blue="0.61235022668393779" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.23921568627450981" green="0.84705882352941175" blue="0.29803921568627451" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <segue destination="uuh-es-FXd" kind="push" id="eWE-95-jca"/>
                             </connections>
@@ -294,7 +294,7 @@
                             </items>
                         </group>
                         <button width="1" alignment="center" verticalAlignment="bottom" title="Stop" id="sQB-bZ-X33">
-                            <color key="backgroundColor" red="0.88369053600000003" green="0.1971288571" blue="0.12172761510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.98039215686274506" green="0.11372549019607843" blue="0.11372549019607843" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <segue destination="g0d-QQ-h1T" kind="push" id="O6L-dh-kir"/>
                             </connections>
