--- a/vesta/vesta WatchKit App/Base.lproj/Interface.storyboard
+++ b/vesta/vesta WatchKit App/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
     <device id="watch38" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -311,7 +311,7 @@
                         <button width="1" alignment="center" verticalAlignment="bottom" title="Stop" id="sQB-bZ-X33">
                             <color key="backgroundColor" red="0.98039215686274506" green="0.11372549019607843" blue="0.11372549019607843" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
-                                <segue destination="g0d-QQ-h1T" kind="push" id="O6L-dh-kir"/>
+                                <action selector="stopTimer" destination="uuh-es-FXd" id="JFG-IR-gUy"/>
                             </connections>
                         </button>
                     </items>
@@ -326,7 +326,7 @@
         <!--Energy Score-->
         <scene sceneID="w2s-aT-shQ">
             <objects>
-                <controller identifier="Energy Score" id="g0d-QQ-h1T">
+                <controller identifier="Energy Score" id="g0d-QQ-h1T" customClass="EnergyInterfaceController" customModule="vesta_WatchKit_Extension">
                     <items>
                         <group width="1" alignment="left" layout="vertical" spacing="6" id="WVz-wN-zYz">
                             <items>
@@ -365,7 +365,7 @@
                                 </group>
                                 <button width="1" alignment="center" verticalAlignment="bottom" title="Done" id="vei-do-efJ">
                                     <connections>
-                                        <segue destination="AgC-eL-Hgc" kind="push" id="aYf-W5-RKf"/>
+                                        <action selector="energyDone" destination="g0d-QQ-h1T" id="WoI-2X-LD5"/>
                                     </connections>
                                 </button>
                             </items>
